# Defuse

./: .gitignore  README.md  io.github.shonebinu.Defuse.json  meson.build  requirements.txt
data/: io.github.shonebinu.Defuse.desktop.in  io.github.shonebinu.Defuse.gschema.xml  io.github.shonebinu.Defuse.metainfo.xml.in  io.github.shonebinu.Defuse.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: defuse.gresource.xml  defuse.in  header-bar.blp  header_bar.py  main.py  meson.build  processor.py  window.blp  window.py  window.ui
